# langchain

./: 01-intro.py  lang_chain.ipynb  pyproject.toml
chapter1/: 01-intro.py
chapter3/: 03-prompts.py
chapter4/: 04-memory.py
chapter5/: agent-executor.py  agent-intro.py  custom_agent_executor.py
chapter8/: streaming.py
docker-ollama/: Dockerfile  docker-compose.yml  entrypoint.sh  init-models.sh  nginx.conf  otel-collector-config.yaml  tempo.yaml
docker-ollama/grafana/provisioning/datasources/: datasources.yaml  tempo.yaml
fede_llm/capstone/api/: ToolsUsedCallbackHandler.py  agent.py  main.py  tools.py
fede_llm/chapter3/: 03-prompts.py
fede_llm/chapter4/: 04-memory.py
fede_llm/monitoring/: logging_example.py  tracer_example.py
monitoring/: logging_example.py  monitoring.py  tracer_example.py
