[project]
name = "fede-llm"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "ipykernel",
    "langchain",
    "langchain-core",
    "langchain-ollama",
    "langsmith",
    "langchain-community",
    "docarray",
    "fastapi",
    "uvicorn",
    "google-search-results",
    "scikit-image",
    "diffusers",
    "torch",
    "transformers",
    "accelerate",
    "matplotlib"
]
